--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
     "clear": "rimraf dist",
     "build": "npm run clear && npm run build:client && npm run build:server",
     "lint": "eslint --ext .js --ext .jsx client/",
-    "precommit": "npm run lint"
+    "precommit": "npm run lint",
+    "start": "cross-env NODE_ENV=production node server/server.js"
   },
   "author": "taoyi",
   "license": "ISC",
@@ -50,6 +51,8 @@
   "dependencies": {
     "axios": "^0.17.1",
     "body-parser": "^1.18.2",
+    "ejs": "^2.6.1",
+    "ejs-compiled-loader": "^1.1.0",
     "express": "^4.16.2",
     "express-session": "^1.15.6",
     "mobx": "^3.5.1",
@@ -57,9 +60,12 @@
     "prop-types": "^15.6.1",
     "query-string": "^6.0.0",
     "react": "^16.2.0",
+    "react-async-bootstrapper": "^2.1.0",
     "react-dom": "^16.2.0",
+    "react-helmet": "^5.2.0",
     "react-router": "^4.2.0",
     "react-router-dom": "^4.2.2",
+    "serialize-javascript": "^1.5.0",
     "serve-favicon": "^2.4.5",
     "webpack": "^3.10.0"
   }
