--- a/package.json
+++ b/package.json
@@ -49,12 +49,16 @@
     "webpack-merge": "^4.1.1"
   },
   "dependencies": {
+    "@material-ui/core": "^1.1.0",
+    "@material-ui/icons": "^1.1.0",
     "axios": "^0.17.1",
     "body-parser": "^1.18.2",
     "ejs": "^2.6.1",
     "ejs-compiled-loader": "^1.1.0",
     "express": "^4.16.2",
     "express-session": "^1.15.6",
+    "jss": "^9.8.1",
+    "jss-preset-default": "^4.5.0",
     "mobx": "^3.5.1",
     "mobx-react": "^4.4.1",
     "prop-types": "^15.6.1",
@@ -63,6 +67,7 @@
     "react-async-bootstrapper": "^2.1.0",
     "react-dom": "^16.2.0",
     "react-helmet": "^5.2.0",
+    "react-jss": "^8.4.0",
     "react-router": "^4.2.0",
     "react-router-dom": "^4.2.2",
     "serialize-javascript": "^1.5.0",
